--- a/package.json
+++ b/package.json
@@ -1,28 +1,69 @@
 {
-  "name": "seuip",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "nextjs-seu=ip",
+  "version": "2.0.0",
+  "private": true,
   "scripts": {
-    "dev": "next dev",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -p 3000",
+    "build": "NODE_ENV=production next build",
+    "start": "next start",
+    "lint": "eslint src --max-warnings=0",
+    "test": "jest",
+    "test:watch": "yarn test --watch",
+    "storybook": "start-storybook -s ./public -p 6006",
+    "build-storybook": "build-storybook -s ./public"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/murikao/seu-ip.git"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/murikao/seu-ip/issues"
+  "lint-staged": {
+    "src/**/*": [
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --bail"
+    ]
   },
-  "homepage": "https://github.com/murikao/seu-ip#readme",
   "dependencies": {
-    "fs": "0.0.1-security",
-    "next": "^10.0.3",
-    "next-images": "^1.6.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "caniuse-lite": "^1.0.30001164",
+    "next": "9.5.2",
+    "next-images": "^1.4.1",
+    "next-pwa": "^3.1.5",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-typescript": "^7.12.7",
+    "@storybook/addon-essentials": "^6.1.10",
+    "@storybook/react": "^6.1.10",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@types/jest": "^26.0.16",
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-inline-react-svg": "^1.1.1",
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.3.0",
+    "jest": "^26.6.3",
+    "jest-styled-components": "^7.0.3",
+    "lint-staged": "^10.5.2",
+    "node-fetch": "^2.6.1",
+    "prettier": "^2.2.1",
+    "typescript": "^4.0.2"
   }
 }
