--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "build": "next build",
+    "export": "next export",
+    "dev": "next dev -p 3001",
     "build": "NODE_ENV=production next build",
     "start": "next start",
     "lint": "eslint src --max-warnings=0",
